testing/macro-tests/tests/ui/generated_requires_ulid.stderr
error: generated(insert = "Ulid::generate") requires a primitive Ulid field
  --> tests/ui/generated_requires_ulid.rs:25:21
   |
25 |             ident = "name",
   |                     ^^^^^^
